grammar.txt
statements      :           statements \n statement
                |           statements ; statement
                |           statement

statement       :           EXIT
                |           TITLE
                |           expr
                |           expr TITLE
                |           ids_assign expr
                |           func_shape ASSIGN expr
                |           CALC ID
                |           PLOT expr FROM expr TO expr
                |           PLOT expr FROM expr TO expr AS ID
                |           PLOT expr FROM expr TO expr AS STRING
                |           POLAR expr
                |           expr POLAR
                |           VARS
                |           NEW

func_shape      :           ID LPAREN exprs expr RPAREN
                |           ID LPAREN expr RPAREN

exprs           :           expr COMMA
                |           exprs expr COMMA

ids_assign      :           ID ASSIGN
                |           ids_assign ID ASSIGN

expr            :           expr + expr
                |           expr - expr
                |           expr * expr
                |           expr / expr
                |           expr ^ expr
                |           expr % expr
                |           - expr                              %prec UMINUS
                |           NUMBER
                |           NUMBER AT expr
                |           NUMBER AT DEGSYM expr
                |           mini_term
                |           PIPE expr PIPE
                |           expr THEN expr
                |           expr THEN ' ID expr '
                |           with_expr                           %prec COMPO_WITH_EXPR
                |           with_expr with_assigns              %prec COMPO_WITH_EXPR
                |           INT expr FROM expr TO expr          %prec INTEGRAL
                |           expr CROCANTE

mono_with_expr  :           expr WITH ID ASSIGN expr            %prec MONO_WITH_EXPR

with_assigns    :           COMMA ids_assign expr               %prec WITH_ASSIGNS
                |           with_assigns COMMA ids_assign expr  %prec WITH_ASSIGNS

mini_term       :           ID
                |           NUMBER mini_term                    %prec CONSTANT
                |           LPAREN expr RPAREN mini_term        %prec CONSTANT
                |           NUMBER mini_term POW expr
                |           LPAREN expr RPAREN mini_term POW expr
                |           MATHFUNC LPAREN expr RPAREN
                |           func_shape
                |           LPAREN expr RPAREN

------

precedence = (
    ('right', CROCANTE),
    ('right', ASSIGN),
    ('left', INTEGRAL),
    ('left', THEN),
    ('left', WITH_EXPR),
    ('left', MONO_WITH_EXPR, COMMA),
    ('right', WITH_ASSIGNS),
    ('left', PLUS, MINUS),
    ('left', TIMES, DIV, MOD),
    ('right', CONSTANT),
    ('right', MATHFUNC, UMINUS),
    ('right', POW),
    ('nonassoc', NUMBER),
    ('nonassoc', AT, DEGSYM),
)





